--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,15 @@ package-lock.json
 
 # Optional REPL history
 .node_repl_history
+
+#  Local .terraform directories
+*/.terraform/*
+**/.terraform/*
+.terraform/
+
+# .tfstate files
+*.tfstate
+*.tfstate.*
+
+# .tfvars files
+*.tfvars
